--- a/app/components/AudioPlayer.module.css
+++ b/app/components/AudioPlayer.module.css
@@ -1,8 +1,10 @@
 .audioPlayerWrapper {
+  padding: 1rem 0;
 }
 
 .flexContainer {
   display: flex;
+
   border-bottom: 1px rgba(218, 218, 218, 0.487) solid;
   border-top: 1px rgba(218, 218, 218, 0.487) solid;
 }
@@ -10,6 +12,8 @@
 .innerFlexContainer {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  padding: 0.5rem 0 0rem 0.5rem;
 }
 
 .topContainer {
@@ -19,7 +23,7 @@
   align-items: flex-start;
 }
 
-.leftUpperCornerContainer {
+.leftUpperCorner {
   display: flex;
 }
 
@@ -34,17 +38,53 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 630px;
+  height: 100px;
+  position: relative;
 }
 
 .waveform {
-  height: 100px;
-  width: 400px;
+  transform: translateY(-15px);
+  height: 50px;
+  width: 600px;
+}
+
+.durationWrapper {
+  padding: 0.05rem;
+  width: 40px;
+  height: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.durationCount {
+  position: absolute;
+  left: 0;
+}
+.durationCalc {
+  position: absolute;
+  right: 0;
+}
+
+.duration {
+  font-size: 0.6rem;
+  color: #4c47f6;
+  color: rgb(206, 206, 206);
+  background-color: black;
+  /* mix-blend-mode: overlay; */
+  z-index: 10000;
+  pointer-events: none;
 }
 
 .playPauseBtn {
-  background-color: #ffe81a;
-  padding: 1.25rem 1.05rem;
+  display: flex;
+  width: 40px;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+  background-color: #4c47f6;
+  padding: 0.6rem;
   box-shadow: none;
   border: none;
   border-radius: 50%;
@@ -52,8 +92,85 @@
   color: white;
 }
 
+.playPauseWrapper {
+  width: 25px;
+  height: 25px;
+  display: flex;
+  position: relative;
+}
+
+.playIcon {
+  width: 80%;
+  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.pauseIcon {
+  width: 60%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.biggerText {
+  font-size: 1.1rem;
+  color: rgb(77, 77, 77);
+  line-height: 1;
+  margin-left: -6px;
+}
+.smallerText {
+  color: rgb(155, 153, 153);
+  margin-left: -6px;
+  font-size: 0.85rem;
+}
+
+.topRightCorner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  color: #4c47f6;
+  line-height: 1;
+}
+
+.version {
+  font-size: 1.1rem;
+  padding-top: 0.1rem;
+}
+
+.btns {
+  color: rgb(155, 153, 153);
+  background-color: white;
+  padding: 0.25rem;
+  font-size: 0.85rem;
+  /* border: 1px solid #4c47f6; */
+  border: none;
+}
+
 .img {
-  object-fit: fill;
-  width: 200px;
-  height: 200px;
+  object-fit: cover;
+  width: 160px;
+  height: 160px;
+}
+
+@media (max-width: 1100px) {
+  .waveformContainer {
+    width: 430px;
+  }
+  .waveform {
+    width: 400px;
+  }
+}
+
+@media (max-width: 900px) {
+  .waveformContainer {
+    width: 330px;
+  }
+  .waveform {
+    width: 300px;
+  }
 }
