--- a/app/components/AudioPlayer.module.css
+++ b/app/components/AudioPlayer.module.css
@@ -47,6 +47,7 @@
   transform: translateY(-15px);
   height: 50px;
   width: 600px;
+  cursor: pointer;
 }
 
 .durationWrapper {
@@ -90,6 +91,7 @@
   border-radius: 50%;
   margin: 0 0.3rem 0 0.3rem;
   color: white;
+  cursor: pointer;
 }
 
 .playPauseWrapper {
