--- a/app/songs/[songId]/page.module.css
+++ b/app/songs/[songId]/page.module.css
@@ -18,14 +18,24 @@
   font-weight: 300;
 }
 
-@media (max-width: 1100px) {
-  .container {
-    width: 600px;
+@media (max-width: 1310px) {
+  .divider {
+    width: 830px;
   }
 }
 
-@media (max-width: 900px) {
-  .container {
-    width: 500px;
+@media (max-width: 1060px) {
+  .divider {
+    width: 630px;
+  }
+}
+@media (max-width: 800px) {
+  .divider {
+    width: 530px;
+  }
+}
+@media (max-width: 600px) {
+  .divider {
+    width: 430px;
   }
 }
