--- a/app/components/AudioPlayerStripped.module.css
+++ b/app/components/AudioPlayerStripped.module.css
@@ -17,11 +17,21 @@
   align-items: center;
 }
 
-.versionTag {
+.versionTagContainer {
   background-color: #4c47f6;
   border-radius: 50%;
-  padding: 0.5rem;
+  position: relative;
+  width: 38px;
+  height: 38px;
+}
+
+.versionTag {
   color: white;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .waveformContainer {
